<resources>
    <string name="app_name">GmmeSdkDemo</string>
    <string name="text_roomid">房间/群组ID:</string>
    <string name="text_quit">离开房间</string>
    <string name="text_enablemic">开麦</string>
    <string name="text_log">查看日志</string>
    <string name="text_clear">清屏</string>
    <string name="text_gmme_destroy">销毁引擎</string>
    <string name="text_change_room">切换房间:</string>
    <string name="text_end">结束</string>
    <string name="text_cancels">取消</string>
    <string name="text_confirm">确定</string>
    <string name="text_conductors">指挥家</string>
    <string name="text_masses">群众</string>
    <string name="text_title">华为多媒体引擎演示</string>
    <string name="text_init">初始化引擎</string>
    <string name="hint_openid">请输入用户ID，开始引擎初始化</string>
    <string name="text_owner">房主</string>
    <string name="hint_roomid">请输入数字字母下划线的RoomId</string>
    <string name="role_type_title">请选择加入国战房间的身份</string>
    <string name="room_owner_title">离开房间指定下一任房主</string>
    <string name="room_transferOwner_title">指定新房主</string>
    <string name="send_to">Send To : </string>
    <string name="receiver_id_placeholder">请输入接收者ID</string>
    <string name="msg_content_placeholder">请输入消息内容</string>
    <string name="send_msg">发送</string>
    <string name="send_failed_tip">发送失败</string>
    <string name="room_quit_title">离开房间选择指定房间</string>
    <string name="recording">录音中</string>
    <string name="cancel_send_audio">手指上滑，取消发送</string>
    <string name="audio_playing">播放中，点击停止播放</string>
    <string name="speak_short">说话时间太短</string>
    <string name="text_audio_clip">媒体音效</string>
    <string name="text_player_position">玩家位置</string>
    <string name="stop_all_audio_clip">全部停止</string>
    <string name="pause_all_audio_clip">全部暂停</string>
    <string name="restore_all_audio_clip">全部恢复</string>
    <string name="play_audio_clip">播放</string>
    <string name="stop_audio_clip">停止</string>
    <string name="pause_audio_clip">暂停</string>
    <string name="restore_audio_clip">恢复</string>
    <string name="audio_volume">音量</string>
    <string name="audio_sound_effects_one">音效1</string>
    <string name="audio_sound_effects_two">音效2</string>
    <string name="audio_play_times">播放次数</string>
    <string name="position">位置</string>
    <string name="axis">朝向</string>
    <string name="current_player">当前玩家</string>
    <string name="x_axis">X轴</string>
    <string name="y_axis">Y轴</string>
    <string name="z_axis">Z轴</string>
    <string name="add_player">新增玩家</string>
    <string name="clear_all_player">清空所有玩家</string>
    <string name="set_scope">设置范围</string>
    <string name="delete">删除</string>
    <string name="three_dimensional_enable">开启3D</string>
    <string name="three_dimensional_disable">关闭3D</string>
    <string name="channel_msg">频道消息</string>
    <string name="p2p_msg">p2p 消息</string>
    <string name="username">用户名</string>
    <string name="receiver">接收用户：</string>
    <string name="send_p2p_msg">发送 p2p 消息</string>
    <string name="send_binary_msg">发送消息(二进制)</string>
    <string name="ad_identify">是否广告识别</string>
    <string name="content_identify">内容风控审核</string>
    <string name="channel_name">频道名</string>
    <string name="subscribe">订阅</string>
    <string name="unsubscribe">退订</string>
    <string name="send_channel_msg">发送频道消息</string>
    <string name="is_cache_msg">存入历史消息</string>
    <string name="current_channel">当前频道</string>
    <string name="specify_receivers_of_channel">指定频道接收用户</string>
    <string name="specify_receivers_hint">指定多个用户时，账号用逗号分割</string>
    <string name="channel_custom_property">频道自定义属性</string>
    <string name="setting">设置</string>
    <string name="refresh">刷新</string>
    <string name="user_custom_property">用户自定义属性</string>
    <string name="query">查询</string>
    <string name="send_message">消息功能</string>
    <string name="channel_property">频道属性</string>
    <string name="player_property">用户属性</string>
    <string name="add">新增</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="property_key">key</string>
    <string name="property_value">value</string>
    <string name="start_time">时间</string>
    <string name="count">数量</string>
    <string name="logged_in_users">已登录用户：</string>
    <string name="delete_all">全部删除</string>
    <string name="days_ago">天前</string>
    <string name="clear_log">清屏</string>
    <string name="days_ago_default">7</string>
    <string name="count_default">0</string>
    <string name="btn_audio_msg">语音消息</string>
    <string name="btn_record">长按录音</string>
    <string name="back">返回</string>
    <string name="upload_audio_msg">上传</string>
    <string name="upload_audio_msg_success">上传成功</string>
    <string name="download_audio_msg">下载</string>
    <string name="local_play">本地播放</string>
    <string name="download_play">下载播放</string>
    <string name="main_activity_name">Game Multimedia</string>
</resources>