<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Huawei Technologies Co., Ltd. 2023-2023. All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@drawable/bg_yxdmtyq_001">

    <TextView
        android:id="@+id/tv_sender_label"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_player"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/username"/>

    <TextView
        android:id="@+id/tv_player"
        android:layout_width="70dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/tv_sender_label"
        app:layout_constraintStart_toEndOf="@id/tv_sender_label"
        app:layout_constraintEnd_toStartOf="@+id/tv_start_time"
        android:lines="1"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/tv_sender_label"
        app:layout_constraintStart_toEndOf="@+id/tv_player"
        app:layout_constraintEnd_toStartOf="@+id/et_days_ago"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:text="@string/start_time"/>

    <EditText
        android:id="@+id/et_days_ago"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/tv_sender_label"
        app:layout_constraintStart_toEndOf="@+id/tv_start_time"
        app:layout_constraintEnd_toStartOf="@+id/tv_days_ago"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:inputType="number"
        android:alpha="0.5"
        android:background="@drawable/bg_yxdmtyq_003"
        android:textSize="12sp"
        android:textColorHint="#524d90"
        android:layout_marginStart="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/days_ago_default"/>

    <TextView
        android:id="@+id/tv_days_ago"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/tv_sender_label"
        app:layout_constraintStart_toEndOf="@id/et_days_ago"
        app:layout_constraintEnd_toStartOf="@+id/tv_count_label"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:text="@string/days_ago"/>

    <TextView
        android:id="@+id/tv_count_label"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/tv_sender_label"
        app:layout_constraintStart_toEndOf="@+id/tv_days_ago"
        app:layout_constraintEnd_toStartOf="@+id/et_count"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/count"/>

    <EditText
        android:id="@+id/et_count"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/tv_sender_label"
        app:layout_constraintStart_toEndOf="@+id/tv_count_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:inputType="number"
        android:alpha="0.5"
        android:background="@drawable/bg_yxdmtyq_003"
        android:textSize="12sp"
        android:textColorHint="#524d90"
        android:layout_marginStart="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/count_default"/>

    <TextView
        android:id="@+id/tv_channel_id"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sender_label"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/channel_name"/>

    <EditText
        android:id="@+id/et_channel_id"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@+id/tv_channel_id"
        app:layout_constraintStart_toEndOf="@+id/tv_channel_id"
        app:layout_constraintEnd_toStartOf="@id/btn_subscribe"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:inputType="text"
        android:alpha="0.5"
        android:background="@drawable/bg_yxdmtyq_003"
        android:textSize="12sp"
        android:textColorHint="#524d90"
        android:layout_marginStart="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <Button
        android:id="@+id/btn_subscribe"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@drawable/button_2"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/et_channel_id"
        app:layout_constraintEnd_toStartOf="@id/btn_unsubscribe"
        app:layout_constraintTop_toTopOf="@id/et_channel_id"
        android:textSize="11sp"
        android:text="@string/subscribe"/>

    <Button
        android:id="@+id/btn_unsubscribe"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@drawable/button_2"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/btn_subscribe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_subscribe"
        android:textSize="11sp"
        android:text="@string/unsubscribe"/>

    <TextView
        android:id="@+id/tv_current_channel"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_channel_id"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/current_channel"/>

    <com.huawei.gmmesdk.demo.component.RepeatSelectionSpinner
        android:id="@+id/spinner_channel"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@+id/tv_current_channel"
        app:layout_constraintStart_toEndOf="@+id/tv_current_channel"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:alpha="0.5"
        android:background="@drawable/bg_yxdmtyq_003"
        android:textSize="14sp"
        android:layout_marginStart="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:id="@+id/tv_specify_receivers"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_current_channel"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/specify_receivers_of_channel"/>

    <EditText
        android:id="@+id/et_specify_receivers"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@+id/tv_specify_receivers"
        app:layout_constraintStart_toEndOf="@+id/tv_specify_receivers"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:inputType="text"
        android:alpha="0.5"
        android:background="@drawable/bg_yxdmtyq_003"
        android:textSize="14sp"
        android:textColorHint="#524d90"
        android:layout_marginStart="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/specify_receivers_hint"/>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/tv_specify_receivers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_send_text"
        android:layout_marginTop="10dp"
        android:gravity="top|start"
        android:textColor="@color/white"
        android:inputType="textMultiLine"
        android:alpha="0.5"
        android:background="@drawable/bg_yxdmtyq_002"
        android:textSize="14sp"
        android:textColorHint="#524d90"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <Button
        android:id="@+id/btn_send_text"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/button_2"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/et_content"
        app:layout_constraintTop_toTopOf="@id/et_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="11sp"
        android:text="@string/send_channel_msg"/>

    <Button
        android:id="@+id/btn_send_binary"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@drawable/button_2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/et_content"
        app:layout_constraintTop_toBottomOf="@id/btn_send_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="11sp"
        android:text="@string/send_binary_msg"/>

    <CheckBox
        android:id="@+id/cb_is_cache_msg"
        style="@style/CheckBoxStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/et_content"
        app:layout_constraintStart_toEndOf="@id/et_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:paddingStart="5dp"
        android:textAllCaps="false"
        android:textColor="#c9c3f0"
        android:textSize="11sp"
        android:text="@string/is_cache_msg"/>

    <CheckBox
        android:id="@+id/cb_ad_identify"
        style="@style/CheckBoxStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cb_is_cache_msg"
        app:layout_constraintStart_toStartOf="@id/cb_is_cache_msg"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:paddingStart="5dp"
        android:textAllCaps="false"
        android:textColor="#c9c3f0"
        android:textSize="11sp"
        android:text="@string/ad_identify"/>

    <CheckBox
        android:id="@+id/cb_content_identify"
        style="@style/CheckBoxStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cb_ad_identify"
        app:layout_constraintStart_toStartOf="@id/cb_ad_identify"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:paddingStart="5dp"
        android:textAllCaps="false"
        android:textColor="#c9c3f0"
        android:textSize="11sp"
        android:text="@string/content_identify"/>

</androidx.constraintlayout.widget.ConstraintLayout>