<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_yxdmtyq_008">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/role_type_title"
        android:gravity="center"
        android:textColor="@color/dialog_color"
        android:textSize="48px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:background="@drawable/bg_yxdmtyq_009">

        <RadioGroup
            android:id="@+id/radio_grp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/conductors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button"
                android:paddingLeft="10dp"
                android:layout_marginBottom="20dp"
                android:textSize="38px"
                android:textColor="@color/radio_color"
                android:text="@string/text_conductors"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button"
                android:paddingLeft="10dp"
                android:layout_marginBottom="20dp"
                android:textSize="38px"
                android:textColor="@color/radio_color"
                android:text="@string/text_masses" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/bt_yxdmtyq_normal_004"
            android:textColor="@color/dialog_color"
            android:text="@string/text_cancels" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/bt_yxdmtyq_normal_003"
            android:textColor="@color/dialog_color"
            android:text="@string/text_confirm" />
    </LinearLayout>
</LinearLayout>