<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Huawei Technologies Co., Ltd. 2023-2023. All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_yxdmtyq_001"
    android:paddingBottom="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".activity.ChannelMsgActivity">

    <Button
        android:id="@+id/btn_send_msg"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@color/tab_selected_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/vp_main"
        android:text="@string/send_message"/>

    <Button
        android:id="@+id/btn_channel_property"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@id/btn_send_msg"
        app:layout_constraintTop_toTopOf="@id/btn_send_msg"
        android:text="@string/channel_property"/>

    <Button
        android:id="@+id/btn_player_property"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@id/btn_channel_property"
        app:layout_constraintTop_toTopOf="@id/btn_channel_property"
        android:text="@string/player_property"/>

    <com.huawei.gmmesdk.demo.adapter.NoSlideViewPager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_send_msg"
        app:layout_constraintBottom_toTopOf="@+id/sv_log_host"/>

    <ScrollView
        android:id="@+id/sv_log_host"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/vp_main"
        app:layout_constraintBottom_toTopOf="@+id/tv_logged_in_users_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:alpha="0.5"
        android:background="@drawable/bg_yxdmtyq_002"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_log_monitor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|top"
                android:singleLine="false"
                android:textColor="@color/white"
                android:textIsSelectable="true"/>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_logged_in_users_label"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sv_log_host"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/logged_in_users"/>

    <TextView
        android:id="@+id/tv_logged_in_users"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@+id/tv_logged_in_users_label"
        app:layout_constraintEnd_toStartOf="@+id/btn_query"
        app:layout_constraintTop_toTopOf="@id/tv_logged_in_users_label"
        android:gravity="center_vertical"/>

    <Button
        android:id="@+id/btn_clear_log"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@drawable/button_2"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_logged_in_users_label"
        android:textSize="11sp"
        android:text="@string/clear_log"/>

    <Button
        android:id="@+id/btn_query"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@drawable/button_2"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toStartOf="@id/btn_clear_log"
        app:layout_constraintTop_toTopOf="@id/tv_logged_in_users_label"
        android:textSize="11sp"
        android:text="@string/query"/>

</androidx.constraintlayout.widget.ConstraintLayout>